[level 2] Title: 도넛과 막대 그래프, Time: 977.61 ms, Memory: 522 MB -BaekjoonHub